# sail

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: build.yml  ci.yml
crates/accumulate/: Cargo.toml
crates/accumulate/src/: imos.rs  lib.rs
crates/algebraic_structures/: Cargo.toml
crates/algebraic_structures/src/: abelian_group.rs  group.rs  lib.rs  monoid.rs  semigroup.rs
crates/algebraics/: Cargo.toml
crates/algebraics/src/: abstract_type.rs  abstruct.rs  lib.rs  property.rs  structure.rs
crates/bitset/: Cargo.toml
crates/bitset/src/: lib.rs
crates/cmp/: Cargo.toml
crates/cmp/src/: lib.rs
crates/compare/: Cargo.toml
crates/counter/src/: lib.rs
crates/counts/: Cargo.toml
crates/counts/src/: lib.rs
crates/fenwick_tree/: Cargo.toml
crates/fenwick_tree/src/: abelian_group.rs  lib.rs
crates/fisher_yates/: Cargo.toml
crates/fisher_yates/src/: lib.rs
crates/gen_cases/: Cargo.toml
crates/gen_cases/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: algorythm.rs  bellman_ford.rs  dijkstra.rs  kruskal.rs  lib.rs  list_graph.rs  lowest_common_ancestor.rs  union_find.rs
crates/graph/src/algorythm/: bellman_ford.rs  dijkstra.rs  kruskal.rs
crates/graph/src/algorythm/lowest_common_ancestor/: doubling.rs  rmq.rs
crates/graph/src/lowest_common_ancestor/: doubling.rs  rmq.rs
crates/graph/src/unweighted/: list_graph.rs  matrix_graph.rs
crates/graph/src/weighted/: list_graph.rs  matrix_graph.rs
crates/index_compression/: Cargo.toml
crates/index_compression/src/: lib.rs
crates/io/: Cargo.toml
crates/io/src/: input.rs  lib.rs  output.rs
crates/io/src/input/: marker.rs
crates/io/src/output/: wrapper.rs
crates/itertools_my/: Cargo.toml
crates/itertools_my/src/: lib.rs
crates/itertools_sail/: Cargo.toml
crates/itertools_sail/src/: lib.rs
crates/lowest_common_ancestor/: Cargo.toml
crates/lowest_common_ancestor/src/: lib.rs
crates/modint/: Cargo.toml
crates/modint/src/: combinatorics.rs  factorial.rs  lib.rs  table.rs
crates/prime/: Cargo.toml
crates/prime/src/: atkin.rs  eratosthenes.rs  factorize.rs  lib.rs  miller_rabin.rs  sieve.rs  sieve_of_atkin.rs  sieve_of_eratosthenes.rs  trial_division.rs
crates/prime/src/sieve/: atkin.rs  eratosthenes.rs
crates/rolling_hash/: Cargo.toml
crates/rolling_hash/src/: lib.rs
crates/sample_generater/: Cargo.toml
crates/sample_generater/src/: lib.rs  marker.rs
crates/segment_tree/: Cargo.toml  README.md
crates/segment_tree/src/: delayed_segment_tree.rs  dual_segment_tree.rs  lib.rs  monoid.rs  segment_tree.rs
crates/sparce_table/: Cargo.toml
crates/sparce_table/src/: lib.rs
crates/sparse_table/: Cargo.toml
crates/sparse_table/src/: lib.rs
crates/sqrt_decomposition/: Cargo.toml
crates/sqrt_decomposition/src/: lib.rs
crates/suffix_array/: Cargo.toml
crates/suffix_array/src/: induced_sort.rs  lib.rs
crates/timer/: Cargo.toml
crates/timer/src/: lib.rs
crates/union_find/: Cargo.toml
crates/union_find/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
crates/vis/: Cargo.toml
crates/vis/src/: lib.rs  visualize.rs
src/: consts.rs  lib.rs  snippet.rs
src/snippet/: counter.rs  distance.rs  index_compression.rs
tests/: playground.rs  template.rs
unstable/binary_tree/src/: lib.rs
unstable/sample_generater/: Cargo.toml
unstable/sample_generater/src/: lib.rs  marker.rs
unstable/scapegoat_tree/: Cargo.toml
unstable/scapegoat_tree/src/: lib.rs
unstable/sqrt_decomposition/: Cargo.toml
unstable/sqrt_decomposition/src/: lib.rs
unstable/suffix_array/: Cargo.toml
unstable/suffix_array/src/: induced_sort.rs
