[package]
name = "modint"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "=0.2.11"
vis = { path = "/Users/roku/room/comp/sail/crates/vis" }

[dev-dependencies]
rand = "0.8.5"
