[package]
name = "rolling_hash"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
itertools = "=0.9.0"
rand = { version = "=0.7.3", features = ["small_rng"] }
