[package]
name = "segment_tree"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "=0.2.11"
itertools = "=0.9.0"
util = { path = "../util" }
algebraic_structures = { path = "../algebraic_structures" }

[dev-dependencies]
rand = "0.8.5"
modint = { path = "../modint" }
