[package]
name = "sparse_table"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebraic_structures = { path = "../algebraic_structures" }
util = { path = "../util" }
itertools = "=0.9.0"
