[package]
name = "sqrt_decomposition"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebraic_structures = { path = "../algebraic_structures" }
util = { path = "../util" }

[dev-dependencies]
rand = "0.8.5"